[gd_scene load_steps=10 format=3 uid="uid://sntjooc6xaot"]

[ext_resource type="Script" path="res://Scripts/Multiplayer/multiplayer_start_game.gd" id="1_ifo1o"]
[ext_resource type="StyleBox" uid="uid://bexrdmx650haa" path="res://Styles/panel.tres" id="1_n648y"]
[ext_resource type="StyleBox" uid="uid://sr3rv6n41wdu" path="res://Styles/transparent_button.tres" id="2_6a3o1"]
[ext_resource type="StyleBox" uid="uid://depdhdvh1mnip" path="res://Styles/button_hover_green.tres" id="2_tj424"]
[ext_resource type="StyleBox" uid="uid://cerythqxamdxh" path="res://Styles/button_hover_yellow.tres" id="5_l023l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_shl63"]

[sub_resource type="FontFile" id="FontFile_iivtk"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b08np"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o5ykr"]

[node name="MultiplayerLobby" type="Control" node_paths=PackedStringArray("in_lobby_label", "players_list", "start_game_button", "timer")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ifo1o")
in_lobby_label = NodePath("Panel/InLobby")
players_list = NodePath("Panel/PlayersList")
start_game_button = NodePath("Panel/Ready")
timer = NodePath("Timer")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.0
offset_top = -184.5
offset_right = 161.0
offset_bottom = 184.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_n648y")

[node name="Ready" type="Button" parent="Panel"]
custom_minimum_size = Vector2(0, 45.485)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -57.5
offset_bottom = -12.015
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = ExtResource("2_6a3o1")
theme_override_styles/hover = ExtResource("2_tj424")
theme_override_styles/pressed = ExtResource("5_l023l")
theme_override_styles/focus = SubResource("StyleBoxEmpty_shl63")
disabled = true
toggle_mode = true
text = "Ready"

[node name="Leave" type="Button" parent="Panel"]
custom_minimum_size = Vector2(0, 45.485)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -97.5
offset_bottom = -52.015
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = ExtResource("2_6a3o1")
theme_override_styles/hover = ExtResource("2_tj424")
theme_override_styles/focus = SubResource("StyleBoxEmpty_shl63")
text = "Leave"

[node name="InLobby" type="RichTextLabel" parent="Panel"]
custom_minimum_size = Vector2(0, 42.225)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
focus_mode = 2
theme_override_fonts/normal_font = SubResource("FontFile_iivtk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b08np")
bbcode_enabled = true
selection_enabled = true

[node name="PlayersList" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 52.0
offset_right = -17.0
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_o5ykr")
bbcode_enabled = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Panel/Ready" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/Leave" to="." method="_on_leave_pressed"]
[connection signal="meta_clicked" from="Panel/InLobby" to="." method="_on_in_lobby_meta_clicked"]
